--- a/configs/raspberrypi3_basic_defconfig
+++ b/configs/raspberrypi3_basic_defconfig
@@ -21,6 +21,7 @@ BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
+BR2_TARGET_ROOTFS_EXT2_SIZE="200M"
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
